--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.5",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.5",
     "web3": "1.2.11"
   },
   "devDependencies": {
