Feat: Add Countdown Fix: Input Number

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.5",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.5",
     "web3": "1.2.11"
